--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="agricultura-subtitulo"> O que é?</h1>
     <p class="agricultura-texto-um">A agricultura de precisão (AP) consiste na aplicação de alta tecnologia no campo. Consideramos esta uma nova forma de manejo na lavoura, já que a agricultura de precisão compreende as diferentes necessidades presentes nas áreas de plantação, buscando explorar e estudar as mesmas para garantir maior retorno sustentável e econômico. </p>
    <p class="agricultura-texto-dois">Com esse sistema, o produtor consegue controlar sua produção de maneira mais eficiente. Isso porque os sensores coletam e analisam as informações do campo, e a partir disso, tomam e aplicam decisões automáticas na plantação. Podemos dizer que essa tecnologia é um dos destaques da transformação digital do agronegócio.
-
+    <a href="https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/cana/producao/avanco-tecnologico/agricultura-de-precisao" class="container-botao">Agricultura de precisão</a>
    
 </div>
    <section class="agricultura-precisao">
@@ -46,6 +46,13 @@
 <img class="agricultura-precisao-imagem-um" src="imagem5.jpg" alt="">
 <img class="agricultura-precisao-imagem-dois" src="imagem1.jpg" alt="">
 </section>
+<a href= "https://www.embrapa.br/busca-de-projetos/-/projeto/212226/agricultura-de-precisao-ap-para-sustentabilidade-do-sistema-produtivo-agricola-pecuario-e-florestal-brasileiro" class="container-botao"> AP para sustentabilidade do sistema produtivo agrícola</a>
+   
 
+
+
+<footer class="rodape">
+    <img class="rodape-imagem" src="imagem1.jpg" alt="">
+</footer>
 </body>
 </html>
