--- a/index.html
+++ b/index.html
@@ -45,9 +45,22 @@
 </div>
 <img class="agricultura-precisao-imagem-um" src="imagem5.jpg" alt="">
 <img class="agricultura-precisao-imagem-dois" src="imagem1.jpg" alt="">
+
 </section>
-<a href= "https://www.embrapa.br/busca-de-projetos/-/projeto/212226/agricultura-de-precisao-ap-para-sustentabilidade-do-sistema-produtivo-agricola-pecuario-e-florestal-brasileiro" class="container-botao"> AP para sustentabilidade do sistema produtivo agrícola</a>
-   
+<a href= "https://www.embrapa.br/busca-de-projetos/-/projeto/212226/agricultura-de-precisao-ap-para-sustentabilidade-do-sistema-produtivo-agricola-pecuario-e-florestal-brasileiro" class="container-botao-um"> AP para sustentabilidade do sistema produtivo agrícola</a>
+
+    
+
+<section class="perguntas">
+<div class="pergunta-div-conteudo">
+    <h2 class="perguntas-titulo">Perguntas frequêntes sobre AP </h2>
+    <p class="perguntas-texto"> </p>
+    <a href="" class="container-botao-"> AP para sustentabilidade do sistema produtivo agrícola</a>
+    
+
+
+</div>
+    </section>
 
 
 
