--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <header class="Cabeçalho">
         <img class="Cabeçalho-imagem" src="imagem2.jpg" alt="">
 <ul class="Cabeçalho-lista">
-<li class="Cabeçalho-lista-item">O avanço tecnológico e a Agricultura de precisão</li>
+<li class="Cabeçalho-lista-item">Desenvolvimento tecnológico  
+    e Agricultura de precisão</li>
 
 </ul>
     </header>
     <section class="tecnologia">
         <div class="tecnologia-div-conteudo" >
-            <h2 class="tecnologia-titulo">O desenvolvimento tecnológico</h2>
+            <h2 class="tecnologia-titulo">Desenvolvimento tecnológico</h2>
             <h1 class="tecnologia-subtitulo"> A história da tecnologia</h1>
             <p class="tecnologia-texto-um">O avanço da tecnologia trouxe inúmeros benefícios para o homem, dos quais o principal foi tornar o trabalho mais fácil e mais produtivo.</p>
    <p class="tecnologia-texto-dois">O processo teve início com a Revolução Industrial, que começou na Inglaterra no século XVIII e se expandiu para outros países, incluindo o Brasil, durante o século XIX. Novas transformações ocorreram ao longo dos anos, até a chegada das inovações tecnológicas, durante o período conhecido como indústria 4.0.</p>
@@ -55,7 +56,7 @@
 <div class="pergunta-div-conteudo">
     <h2 class="perguntas-titulo">Perguntas frequêntes sobre AP </h2>
     <p class="perguntas-texto"> </p>
-    <a href="" class="container-botao-"> AP para sustentabilidade do sistema produtivo agrícola</a>
+    <a href="https://www.embrapa.br/tema-automacao-e-agricultura-de-precisao/perguntas-e-respostas" class="container-botao-dois">Perguntas e respostas</a>
     
 
 
