--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <h1 class="agricultura-subtitulo"> O que é?</h1>
     <p class="agricultura-texto-um">A agricultura de precisão (AP) consiste na aplicação de alta tecnologia no campo. Consideramos esta uma nova forma de manejo na lavoura, já que a agricultura de precisão compreende as diferentes necessidades presentes nas áreas de plantação, buscando explorar e estudar as mesmas para garantir maior retorno sustentável e econômico. </p>
- <a href="https://ead.senargo.org.br/blog/o-que-e-agricultura-de-precisao" class="container-botao">Agricultura de Precisão</a>
+ <a href="https://ead.senargo.org.br/blog/o-que-e-agricultura-de-precisao" class="container-botao"> Clique para saber mais sobre Agricultura de Precisão</a>
 </div>
 
 </section>
